# sdf-raymarcher-k9f2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  raymarcher.py  test_bugs.py  test_raymarcher.py
.github/workflows/: ci.yml
docs/: architecture.md
examples/: glass_scene.py  scene.yaml  showcase.yaml  simple_sphere.py  tonemap_example.py  transforms_example.py
src/raymarcher_k9f2/: __init__.py  camera.py  cli.py  config.py  csg.py  marcher.py  material.py  patterns.py  primitives.py  renderer.py  scene.py  scenes.py  tonemap.py  transforms.py  vec3.py  vec_renderer.py
tests/: test_new_features.py  test_raymarcher.py
