[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf-raymarcher-k9f2"
version = "2.0.0"
description = "A pure-Python signed distance field (SDF) ray marcher with physically-based lighting, reflections, refractions, tone mapping, SDF transforms, multiprocessing, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SDF Ray Marcher Project"},
]
keywords = ["ray-marching", "sdf", "signed-distance-field", "3d-rendering", "graphics", "tone-mapping", "physically-based-rendering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
config = [
    "pyyaml>=6.0",
    "toml>=0.10",
]
dev = [
    "pytest>=7.0",
    "pyyaml>=6.0",
    "toml>=0.10",
]

[project.scripts]
raymarcher-k9f2 = "raymarcher_k9f2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]